# OOP_indie_studio_2018

./: CMakeLists.txt  README.md
assets/maps/: map1.1.txt  map1.2.txt  map1.3.txt  map2.1.txt  map2.2.txt  map2.3.txt  map3.1.txt  map3.2.txt  map3.3.txt  map_random1.txt  map_random2.txt  map_random3.txt
models/bonus/: item.b3d
models/box/: box.x
src/: main.cpp
src/APlayer/: APlayer.cpp  APlayer.hpp
src/APlayer/IaBot/: IaBot.cpp  IaBot.hpp
src/APlayer/Player/: Player.cpp  Player.hpp
src/AppContext/: AppContext.hpp
src/Bomb/: Bomb.cpp  Bomb.hpp
src/ButtonID/: ButtonID.hpp
src/CollisionSystem/: CollisionSystem.cpp  CollisionSystem.hpp
src/EventReceiver/: EventReceiver.cpp  EventReceiver.hpp
src/ExplosionParticles/: ExplosionParticles.cpp  ExplosionParticles.hpp
src/GameException/: GameException.cpp  GameException.hpp
src/GameManager/: GameManager.cpp  GameManager.hpp
src/IBonus/: IBonus.hpp
src/IBonus/BombSlotDown/: BombSlotDown.cpp  BombSlotDown.hpp
src/IBonus/BombSlotUp/: BombSlotUp.cpp  BombSlotUp.hpp
src/IBonus/FireDown/: FireDown.cpp  FireDown.hpp
src/IMap/: IMap.hpp
src/IScene/: IScene.hpp
src/Indie/: Indie.cpp  Indie.hpp
src/MapGenerator/: MapGenerator.cpp  MapGenerator.hpp
src/MapStock/: MapStock.cpp  MapStock.hpp
src/MusicManager/: MusicManager.cpp  MusicManager.hpp
src/Save/: Save.cpp  Save.hpp  key.is
src/SaveGame/: SaveGame.cpp  SaveGame.hpp
src/SceneStock/: SceneStock.cpp  SceneStock.hpp
src/SoundManager/: SoundManager.cpp  SoundManager.hpp
tests/: Makefile  test_MapGenerator.cpp
(+26 files in other folders)
